# litepad

./: .travis.yml  Cargo.toml  README.md  load-menu.glade  new-ui.glade  tab-menu.glade  ui.glade  ui.glade~  url-dialog.glade
src/: app.rs  main.rs  source.rs  util.rs  view.rs
