[package]
name = "litepad"
version = "0.1.0"
authors = ["Tom Bebbington <10bebtho@blue-coat.org>"]
description = "A simple, lightweight WYSIWYG markdown editor"
repository = "https://github.com/TomBebb/litepad"
readme = "README.md"
keywords = ["markdown", "editor", "gui", "app", "wysiwyg"]
categories = ["gui", "text-editors"]
license = "GPLv3"


[badges]
travis-ci = { repository = "TomBebb/litepad", branch = "master" }

[dependencies]
gdk-pixbuf = "*"
hyper = "^0.10.9"
gtk = { version = "^0.1.2", features = [ "v3_16" ] }
pulldown-cmark = { version = "^0.0.11", default-features = false }